<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
    android:layout_width="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RingwormActivity"
    >

    <LinearLayout
        android:id="@+id/ringbanner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#00BCD4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RING WORM"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_below="@+id/ringbanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ringworm"/>

        <TextView
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="Ring Worm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textAlignment="inherit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ring_worm"/>

        <TextView
            android:textSize="15dp"
            android:textStyle="bold"
            android:text="Pencegahan :"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pencegahan_ringworm"/>
        <TextView
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pengobatan"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pengobatan_ringworm"/>


    </LinearLayout>

</RelativeLayout>
    </ScrollView>