<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".JerawatActivity"
        >

        <LinearLayout
            android:id="@+id/jerawatbanner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00BCD4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Jerawat Kucign"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_below="@+id/jerawatbanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/feline_acne"/>

            <TextView
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="Jerawat Kucing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textAlignment="inherit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jerawat"/>

            <TextView
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="Pencegahan :"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Pencegahan_jerawat"/>
            <TextView
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pengobatan"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Pengobatan_jerawat"/>


        </LinearLayout>

    </RelativeLayout>
</ScrollView>